tweaking to see new pod with new limits